styles/Home.module.css
.main{
  padding: 1% 15%;
  margin-top: 7em;
}

/* .fullWidthContent{
  margin-bottom: 4rem;
} */

.valuePropSection{
  background-image: '';
}

.ctaBottom {
  display: flex;
  flex-direction: column;
  align-items: center;
}

